--- a/pages/book/index.less
+++ b/pages/book/index.less
@@ -1,13 +1,19 @@
+.contanier {
+    background: #fff;
+    border-radius: 4px;
+}
 .head {
     display: flex;
     align-items: center;
     height: 48px;
+    padding-left: 20px;
+    border-bottom: 1px solid #eee;
 }
 
 .left {
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
     padding: 20px;
     margin-bottom: 20px;
     position: relative;
+    min-height: 400px;
 }
 
