--- a/pages/category/id.less
+++ b/pages/category/id.less
@@ -1,9 +1,14 @@
+.container {
+    background: #fff;
+    border-radius: 4px;
+}
 .head {
     display: flex;
     align-items: center;
     height: 48px;
+    padding-left: 20px;
 }
 
 .main {
-   
+    padding: 0 20px 20px 20px;
 }
