--- a/components/layout/index.less
+++ b/components/layout/index.less
@@ -1,4 +1,14 @@
 .main {
     max-width: 1200px;
     margin: 0 auto;
+    padding-top: 100px;
+}
+.bg {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: url("/image/bg1.jpg") center no-repeat;
+    background-size: cover;
+    z-index: -1;
 }
