--- a/pages/category/index.less
+++ b/pages/category/index.less
@@ -2,4 +2,13 @@
     display: flex;
     align-items: center;
     height: 48px;
+    background: #fff;
+    padding-left: 20px;
+}
+
+.main {
+    background: #fff;
+    padding: 20px;
+    padding-top: 0;
+    min-height: 400px;
 }
