--- a/components/listItem/index.less
+++ b/components/listItem/index.less
@@ -5,4 +5,11 @@
 
 .title {
     padding: 8px 0;
+    overflow: hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap
+}
+
+.des {
+    word-break: break-all;
 }
