--- a/components/listItem/index.less
+++ b/components/listItem/index.less
@@ -1,6 +1,7 @@
 .item_wrap {
     padding: 20px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 4px;
+    background-color: #fff;
 }
 
 .title {
