--- a/components/layout/index.less
+++ b/components/layout/index.less
@@ -8,7 +8,6 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background: url("/image/bg1.jpg") center no-repeat;
-    background-size: cover;
     z-index: -1;
+    background-color: #f4f4f4;
 }
