--- a/pages/index.less
+++ b/pages/index.less
@@ -3,6 +3,14 @@
     flex-wrap: wrap;
     align-items: center;
     background: #eee;
+
+    a {
+        color:rgba(0, 0, 0, 0.85);
+    }
+
+    a:hover {
+        color:#1890ff
+    }
 }
 
 .nav_item {
@@ -11,6 +19,5 @@
 }
 
 .content {
-    padding: 20px;
-    background-color: #fff;
+    padding-top: 10px;
 }
